# drf-api-tools

./: .gitignore  openapi-schema.yml  pyproject.toml
book_app/: admin.py  models.py  serializers.py  urls.py  views.py
book_app/migrations/: 0001_initial.py
my_project/: schemas.py  settings.py  urls.py
